# zkCATS

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  hardhat.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: general.yml
crates/lib/lib-core/: Cargo.toml
crates/lib/lib-core/src/: config.rs  lib.rs
crates/lib/lib-core/src/_dev_util/: dev_db.rs  mod.rs
crates/lib/lib-core/src/crypt/: error.rs  mod.rs  password.rs  token.rs
crates/lib/lib-core/src/ctx/: mod.rs
crates/lib/lib-core/src/model/: base.rs  community.rs  error.rs  mod.rs  user.rs
crates/lib/lib-core/src/model/store/: mod.rs
crates/lib/lib-util/: Cargo.toml
crates/lib/lib-util/src/: b64.rs  env.rs  error.rs  lib.rs  time.rs
crates/lib/lib-web/: Cargo.toml
crates/lib/lib-web/src/: error.rs  lib.rs  token.rs
crates/lib/lib-web/src/error/: mod.rs
crates/lib/lib-web/src/handlers/: handlers_login.rs  handlers_rpc.rs  mod.rs
crates/lib/lib-web/src/log/: mod.rs
crates/lib/lib-web/src/middleware/: mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs
crates/lib/lib-web/src/routes/: mod.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
crates/lib/lib-web/src/rpc/: community_rpc.rs  mod.rs
crates/lib/services/web_server/: Cargo.toml
crates/lib/services/web_server/examples/: client.rs  gen-key.rs
crates/lib/services/web_server/src/: config.rs  error.rs  main.rs
eth/: anvil-rich-wallets.md
eth/contracts/: CatCommunity.sol  MilkFund.sol
eth/test/: CatCommunity.test.js  MilkFund.test.js
scripts/: deploy.ts  init_db.sh
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
web/: README.md  index.html  package.json  pnpm-lock.yaml
web/src/: App.vue  main.ts  vite-env.d.ts
web/src/components/: BindWallet.vue  Login.vue
web/src/lib/: axios.ts  notify.ts
web/src/router/: index.ts
web/src/store/: AuthStore.ts
