[workspace]
resolver = "2"
members = [
    "crates/lib/lib-util",
    # -- Application Libraries
    "crates/lib/lib-core",       # e.g., model, ctx, config.
    "crates/lib/lib-web",  
]

[workspace.dependencies]
axum = "0.8.1"
sqlx = { version = "0.8", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}

serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
derive_more = {version = "2.0.1", features = ["from", "display"] }