[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_with = { workspace = true }
lib-util = { path = "../lib-util"}

[dev-dependencies]
serial_test = "3"

[lints]
workspace = true
