[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
lib-core = { version = "0.1.0", path = "../lib-core" }
lib-util = { version = "0.1.0", path = "../lib-util" }
serde_json = "1.0.140"
serde_with = "3.12.0"
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }
uuid = {version = "1", features = ["v4","fast-rng",]}
strum_macros = "0.27.1"
