[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { version = "0.1.0", path = "../lib-core" }
lib-util = { version = "0.1.0", path = "../lib-util" }
serde_json = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }
uuid = {version = "1", features = ["v4","fast-rng",]}
strum_macros = "0.27.1"
serde_with = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }
rpc-router = { workspace = true }
async-trait = "0.1.87"

[lints]
workspace = true

[lib]
test = false
