[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "web_server"
path = "src/main.rs"
test = false

[dependencies]

# -- App Libs
lib-util = { path = "../../lib-util"}
lib-core = { path = "../../lib-core"}
lib-web = { path = "../../lib-web"}
# -- Async
tokio = { workspace = true }
axum = { workspace = true }

rand = "0.9"
derive_more = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
httpc-test = "0.1.10"
base64-url = "3"

[lints]
workspace = true